cargo-features = ["edition"]

[package]
name = "rendezvous"
version = "0.2.0"
edition = "2018"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "AGPL-3.0"
publish = false

[[bin]]
name = "rendezvous"
path = "src/main.rs"

[dependencies]
actix = "0.7"
actix_derive = "0.3"
derive_builder = "0.5"
env_logger = "0.5"
failure = "0.1.2"
futures-preview = { version = "0.3.0-alpha.5", features = ["tokio-compat"] }
irc = "0.13.5"
lazy_static = { version = "1.1", features = ["nightly"] }
log = "0.4"
parking_lot = "0.5"
pin-utils = "0.1.0-alpha.2"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
threadpool = "1.7"
tokio = "0.1.8"
toml = "0.4"
typemap = "0.3"

[dependencies.serenity]
default_features = false
features =  [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
]
version = "0.5"

[dev-dependencies]
rand = "0.5"

[profile.dev]
opt-level = 0
codegen-units = 20
lto = false

[profile.release]
opt-level = 3
lto = false
debug = true

[replace."serenity:0.5.8"]
git = "https://github.com/serenity-rs/serenity"
rev = "669da407111f924a5dc498c15c0c0b43f7b42411"
