[package]
name = "rendezvous"
version = "0.2.0"
edition = "2018"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "AGPL-3.0"
publish = false

[[bin]]
name = "rendezvous"
path = "src/main.rs"

[dependencies]
actix = "0.7"
actix_derive = "0.4"
derive_builder = "0.7"
env_logger = "0.6"
failure = "0.1.5"
futures-preview = { version = "0.3.0-alpha.13", features = ["compat"] }
irc = "0.13.6"
lazy_static = "1.3"
log = "0.4"
parking_lot = "0.5"
pin-utils = "0.1.0-alpha.4"
regex = "1.1"
serde = "1.0"
serde_derive = "1.0"
threadpool = "1.7"
tokio = "0.1.17"
toml = "0.5"
typemap = "0.3"

[dependencies.serenity]
default_features = false
features =  [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
]
version = "=0.5.10"

[dev-dependencies]
rand = "0.6"

[profile.dev]
opt-level = 0
codegen-units = 20
lto = false

[profile.release]
opt-level = 3
lto = true
debug = true
