[package]
name = "rendezvous-bouncer-discord"
version = "0.3.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
rendezvous-common = { path = "../common" }

[dependencies.serenity]
version = "0.8"
default-features = false
features = [
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "utils",
]
