[package]
name = "rendezvous-bouncer-discord"
version = "0.4.0-dev"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2021"
license = "AGPL-3.0"
publish = false

[dependencies]
parking_lot = "0.11"
rendezvous-common = { path = "../common" }

[dependencies.serenity]
version = "0.8"
default-features = false
features = ["client", "gateway", "http", "model", "rustls_backend", "utils"]
