[package]
name = "rendezvous-bouncer-irc"
version = "0.4.0-dev"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
rendezvous-common = { path = "../common" }

[dependencies.irc]
version = "0.15"
default-features = false
features = ["tls-rust", "toml_config"]
