[package]
name = "rendezvous-common"
version = "0.4.0-dev"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
anyhow = "1.0"
nng = "1.0.0-rc.2"
nng-sys = { version = "1.2.4-rc", default-features = false }
parking_lot = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
scopeguard = "1.1"
