[package]
name = "rendezvous-server"
version = "0.3.0"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
publish = false

[dependencies]
async-std = { version = "1.5", features = ["attributes", "unstable"] }
futures = "0.3"
pin-project = "0.4"
rendezvous-common = { path = "../common" }
